--- a/src/index.html
+++ b/src/index.html
@@ -4,32 +4,114 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./assets/img/4geeks.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Payment Form Example</title>
 
-    <!-- Fontawesome is our recomended library for icons -->
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    />
+    <!-- Fontawesome -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="container my-5">
+      <div class="card">
+        <div class="card-header">
+          <h1 class="h4 mb-0">Payment Form Example</h1>
+        </div>
+        <div class="card-body">
+          <div class="alert alert-danger" role="alert">
+            Some fields are missing
+          </div>
+
+          <form class="row g-3 needs-validation" novalidate>
+            <div class="col-md-4">
+              <label for="cardNumber" class="form-label">Card</label>
+              <input type="text" class="form-control" id="cardNumber" required />
+            </div>
+
+            <div class="col-md-4">
+              <label for="cvc" class="form-label">CVC</label>
+              <input type="text" class="form-control" id="cvc" required />
+            </div>
+
+            <div class="col-md-4">
+              <label for="amount" class="form-label">Amount</label>
+              <input type="text" class="form-control" id="amount" required />
+            </div>
+
+            <div class="col-md-6">
+              <label for="firstName" class="form-label">First Name</label>
+              <input type="text" class="form-control" id="firstName" required />
+            </div>
+
+            <div class="col-md-6">
+              <label for="lastName" class="form-label">Last Name</label>
+              <input type="text" class="form-control" id="lastName" required />
+            </div>
+
+            <div class="col-md-6">
+              <label for="city" class="form-label">City</label>
+              <input type="text" class="form-control" id="city" required />
+            </div>
+
+            <div class="col-md-3">
+              <label for="state" class="form-label">State</label>
+              <select class="form-select" id="state" required>
+                <option value="">Pick a State</option>
+                <option value="AL">Alabama</option>
+                <option value="TX">Texas</option>
+                <option value="CA">California</option>
+                <!-- etc. -->
+              </select>
+            </div>
+
+            <div class="col-md-3">
+              <label for="postalCode" class="form-label">Postal Code</label>
+              <input type="text" class="form-control" id="postalCode" required />
+            </div>
+
+            <div class="col-12">
+              <label class="form-label">We accept:</label>
+              <div class="d-flex gap-3 payment-methods">
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="paymentMethod" value="visa" />
+                  <label class="form-check-label"><i class="fa-brands fa-cc-visa"></i></label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="paymentMethod" value="mastercard" />
+                  <label class="form-check-label"><i class="fa-brands fa-cc-mastercard"></i></label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="paymentMethod" value="paypal" />
+                  <label class="form-check-label"><i class="fa-brands fa-cc-paypal"></i></label>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 text-end">
+              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"></textarea>
+              <label for="floatingTextarea2" class="form-label">Add any notes here:</label>
+            </div>
+
+            <div class="col-12">
+              <button class="btn btn-secondary mt-3" type="button">Cancel</button>
+              <button class="btn btn-primary mt-3" type="submit">Send</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
 
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
-    <script type="module" src="/app.js"></script>
+    <!-- Custom JS -->
+    <script src="app.js"></script>
   </body>
 </html>
